syntax = "proto3";

option go_package = "github.com/luks-itu/miniproject2/chittychat";

message Server_Message {
    string text = 1;
    int64 lamport = 2;
    int32 port = 3;
}

message Server_Connection {
    int32 port = 1;
    optional string name = 2;
}

message Server_ResponseCode {
    int32 code = 1;
    optional string description = 2;
}


service ChittyChat {
    rpc Join(Server_Connection) returns (Server_ResponseCode);
    rpc Leave(Server_Connection) returns (Server_ResponseCode);
    rpc Publish(Server_Message) returns (Server_ResponseCode);
}
